--- a/src/main/resources/static/css/sala.css
+++ b/src/main/resources/static/css/sala.css
@@ -1,3 +1,40 @@
 .fondo{
     background: radial-gradient(circle, rgba(138,237,231,1) 0%, rgba(220,221,239,1) 100%);
 }
+
+#chatSection {
+    position: absolute;
+    top: 110px;
+    left: 700px;
+    width: 800px;
+    height: 600px;
+}
+#chatbox {
+    text-align:left;
+    margin:0 auto;
+    margin-bottom:25px;
+    padding:10px;
+    background:#fff;
+    height:600px;
+    width:430px;
+    border:1px solid #ACD8F0;
+    overflow:auto;
+}
+
+#usermsg {
+    width:430px;
+    border:1px solid #ACD8F0;
+    height: 30px
+}
+
+.btn btn-outline-primry {
+    text-decoration:none;
+    font-weight: 100;
+    font-size: 10px;
+    padding-left:40px;
+    border-color: #d8d8d8;
+    border-width: 2px;
+    border-style: solid;
+    border-radius:35px;
+}
+
