--- a/src/main/resources/static/css/sala.css
+++ b/src/main/resources/static/css/sala.css
@@ -1,5 +1,10 @@
 .fondo{
-    background: radial-gradient(circle, rgba(138,237,231,1) 0%, rgba(220,221,239,1) 100%);
+    background: url(../images/b1.jpg) no-repeat 0px 0px;
+}
+
+canvas{
+    border:10px solid blue;
+    background-color: floralwhite;
 }
 
 #chatSection {
